--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-    "name": "kaleido-auto-bot",
-    "version": "2.0.0",
-    "description": "Advanced Quantum Mining Bot for Kaleido Finance Network",
-    "main": "main.js",
-    "type": "module",
-    "scripts": {
-      "start": "node main.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-      "quantum-mining",
-      "blockchain",
-      "crypto",
-      "kaleido-finance",
-      "web3"
-    ],
-    "author": "airdropinsiders",
-    "license": "MIT",
-    "dependencies": {
-      "axios": "^1.6.2",
-      "chalk": "^5.3.0"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    }
+  "name": "kaleido-auto-bot",
+  "version": "2.0.0",
+  "description": "Advanced Quantum Mining Bot for Kaleido Finance Network",
+  "main": "main.js",
+  "type": "module",
+  "scripts": {
+    "start": "node main.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "quantum-mining",
+    "blockchain",
+    "crypto",
+    "kaleido-finance",
+    "web3"
+  ],
+  "author": "airdropinsiders",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "chalk": "^5.3.0",
+    "fake-useragent": "^1.0.1",
+    "https-proxy-agent": "^7.0.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
+}
